# nh

./: Cargo.toml
crates/nh/: Cargo.toml
crates/nh-clean/src/: clean.rs
crates/nh-config/src/: lib.rs
crates/nh-core/src/: checks.rs  command.rs  util.rs
crates/nh-darwin/src/: args.rs
crates/nh-home/src/: args.rs
crates/nh-installable/src/: lib.rs  tests.rs
crates/nh-nixos/src/: args.rs  generations.rs  nixos.rs
crates/nh-remote/src/: copy.rs  remote.rs
crates/nh-search/src/: args.rs  backend.rs  branches.rs  issues.rs  offline.rs  online.rs  prs.rs  types.rs
crates/nh-search/src/github/: auth.rs  issues.rs  mod.rs  prs.rs  reachability.rs  transport.rs  types.rs
crates/nh-search/src/render/: prs.rs
crates/nh/src/: interface.rs  lib.rs  logging.rs
xtask/src/: main.rs
